--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>
+  Here all the posts
+</h1>
+
+<ul>
+  <% @posts.each do |i| %>
+    <li>
+      <p>
+        <%= i.title + i.text  %>
+        <%= link_to "Show", post_path(i) %>
+      </p>
+    </li>
+  <% end %>
+</ul>
