--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Posts#show</h1>
-<p>Find me in app/views/posts/show.html.erb</p>
+<strong>
+  Title:
+</strong>
+<%= @posts.title %>
+<br>
+<strong>
+Text:
+</strong>
+<%= @posts.text %>
+<br>
+<%= link_to "Back", posts_path %>
